Setting pages, routes, components

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+html.fs-lg {
+  font-size: 20px;
+}
+
+html.fs-xl {
+  font-size: 24px;
+}
+
 .btn {
-  @apply text-base-100 h-auto min-h-[36px] rounded-md px-4 leading-5;
+  @apply min-h-[36px] px-4 leading-5 text-base-100;
   text-transform: none;
 }
 
@@ -13,4 +21,11 @@
 
 ::selection {
   @apply bg-accent;
+}
+
+@media (prefers-color-scheme: dark) {
+  .btn-success,
+  .btn-info {
+    @apply text-white;
+  }
 }
