--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-html.fs-lg {
-  font-size: 20px;
+* {
+  font-size: 12pt;
 }
 
-html.fs-xl {
-  font-size: 24px;
+body.fs-lg * {
+  font-size: 16pt;
+}
+
+body.fs-xl * {
+  font-size: 20pt;
+}
+
+button.btn:not(.btn-info) > svg {
+  @apply h-5 stroke-black dark:stroke-white;
+}
+
+button.btn:is(.btn-info) > svg {
+  @apply h-5 stroke-base-100 dark:stroke-white;
 }
 
 .btn:not(.btn-circle) {
-  @apply min-h-[36px] px-4 leading-5 text-base-100 dark:text-white;
+  @apply px-4 leading-5 py-1;
   text-transform: none;
 }
 
@@ -25,11 +37,4 @@ html.fs-xl {
 
 ::selection {
   @apply bg-accent;
-}
-
-@media (prefers-color-scheme: dark) {
-  .btn-success,
-  .btn-info {
-    @apply text-white;
-  }
 }
