--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,7 @@
-* {
-  font-size: 12pt;
+html.fs-lg {
+  font-size: 18px !important;
 }
 
-body.fs-lg * {
-  font-size: 16pt;
-}
-
-body.fs-xl * {
-  font-size: 20pt;
+html.fs-xl {
+  font-size: 20px !important;
 }
